--- a/package.json
+++ b/package.json
@@ -12,8 +12,13 @@
     "lint": "eslint . --fix"
   },
   "dependencies": {
+    "@primeuix/themes": "^1.0.0",
+    "@primevue/themes": "^4.3.1",
     "@tailwindcss/vite": "^4.0.12",
+    "@vuepic/vue-datepicker": "^11.0.1",
     "pinia": "^3.0.1",
+    "primeicons": "^7.0.0",
+    "primevue": "^4.3.1",
     "tailwindcss": "^4.0.12",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
