--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@primevue/themes": "^4.3.1",
     "@tailwindcss/vite": "^4.0.12",
     "@vuepic/vue-datepicker": "^11.0.1",
+    "@vueuse/core": "^13.0.0",
     "axios": "^1.8.3",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
