--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vuepic/vue-datepicker": "^11.0.1",
     "@vueuse/core": "^13.0.0",
     "axios": "^1.8.3",
+    "jwt-decode": "^4.0.0",
     "pinia": "^3.0.1",
     "primeicons": "^7.0.0",
     "primevue": "^4.3.1",
